--- a/P4/indexx.html
+++ b/P4/indexx.html
@@ -6,7 +6,7 @@
       </head>
       <body style="background-color: yellow;">
         <h1> SERVER</h1>
-        <p>I am the pink server! :-)</p>
+        <p>I am the yellow server! :-)</p>
         <p><a href="http://127.0.0.1:8081/blue">Blue Server</a></p>
         <p><a href="http://127.0.0.1:8081/pink">Pink Server</a></p>
 
