--- a/P5/indexx.html
+++ b/P5/indexx.html
@@ -6,7 +6,7 @@
       </head>
       <body style="background-color: yellow;">
         <h1> SERVER</h1>
-        <p>I am the pink server! :-)</p>
+        <p>I am the yellow server! :-)</p>
         <p><a href="http://212.128.253.111:8009/blue">Blue Server</a></p>
         <p><a href="http://212.128.253.113:8009/pink">Pink Server</a></p>
 
