Links returning to indexx.html page (home page) have been added.

--- a/P4/blue.html
+++ b/P4/blue.html
@@ -7,5 +7,6 @@
       <body style="background-color: blue;">
         <h1>BLUE SERVER</h1>
         <p>I am the blue server! :-)</p>
+        <p><a href="http://127.0.0.1:8081/">Yellow server</a></p>
       </body>
     </html>
