Some links have been added in order to return to the main page. ALl HTMl files are done.

--- a/P5/pink.html
+++ b/P5/pink.html
@@ -7,5 +7,6 @@
       <body style="background-color: pink;">
         <h1>PINK SERVER</h1>
         <p>I am the Pink server! :-)</p>
+         <p><a href="http://127.0.0.1:8009/">Yellow server</a></p>
       </body>
     </html>
