Some links have been added in order to return to the main page. And also some comments.

--- a/session-13/error.html
+++ b/session-13/error.html
@@ -6,5 +6,7 @@
       </head>
       <body style="background-color: red;">
         <h1>ERROR</h1>
+       <p>Sorry this resource is not available, you can come back to the home page in the link below: </p>
+        <a href="/">Main page</a>
       </body>
     </html>
